--- a/Form.html
+++ b/Form.html
@@ -12,6 +12,7 @@
         .heading{
             font-size: bold;
             font-style: none;
+            font-weight: 2px;
             
         }
         label{
